[package]
name = "auto-merged-state-data"
version = "1.0.0"
edition = "2024"

[dependencies]
arti-client = { version= "0.31.0", features=["onion-service-service","onion-service-client","static","experimental-api"] }
tor-cell = "0.31.0"
tor-hsservice = "0.31.0"
tor-proto = "0.31.0"
tor-rtcompat = { version = "0.31.0", features = ["static"] }
tor-llcrypto = "0.31.0"
tor-hscrypto = "0.31.0"
anyhow = "1.0.86"
base64 = "0.22.1"
rand = "0.9.1"
sha3 = "0.10"
hyper = { version = "1.4", features = ["http1", "server", "client"] }
tokio = { version="1.40" }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
base32 = "0.5"
ed25519-dalek = "2.1"
futures-util = "0.3.30"
log = "0.4"
futures = "0.3.30"
automerge = "0.6.1"
autosurgeon = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
