[package]
name = "auto-merged-state-data"
version = "1.1.0"
edition = "2024"

[dependencies]
arti-client = { version = "0.33.0", features = [
    "onion-service-service",
    "onion-service-client",
    "static",
    "experimental-api",
] }
tor-cell = "0.33.0"
tor-hsservice = "0.33.0"
tor-proto = "0.33.0"
tor-rtcompat = { version = "0.33.0", features = ["static"] }
tor-llcrypto = "0.33.0"
tor-hscrypto = "0.33.0"
anyhow = "1.0.98"
base64 = "0.22.1"
rand = "0.9.2"
sha3 = "0.10.8"
hyper = { version = "1.6.0", features = ["http1", "server", "client"] }
tokio = { version = "1.47.1" }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["tokio"] }
base32 = "0.5.1"
ed25519-dalek = "2.2.0"
futures-util = "0.3.31"
log = "0.4.27"
futures = "0.3.31"
automerge = "0.6.1"
autosurgeon = "0.8.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
